  previous behavior was error-prone: inserting into a scratch collection via <=
  was not rejected, but the inserted data would immediately be discarded at the
  beginning of the next tick. Hence, more consistent to simply require <+ or <~
  for all insertions from outside Bloom rules.
* Fix bug in join operators whose qualifiers reference collections defined
  inside imported modules (#301)
* Fix several bugs in rescan/invalidation logic for tables in the presence of
  upstream deletions (#303)
* Fix regression in file_reader collections (#304)
* Improve chaining of notin operators
* Optimize notin self joins
* Improve error reporting for syntax errors on temp collections (#310)
* Add Travis CI integration hooks (#300, Josh Rosen)

Lattices:

* Rename lmap#apply_monotone to lmap#apply. Also, allow #apply to take either
  monotone functions or morphisms, and improve error reporting.
* Add lmap#filter. This takes an lmap whose values are elements of the lbool
  lattice and returns an lmap containing only those k/v pairs where the value is
  true.
* More intuitive lattice equi-join syntax (lset#eqjoin). Rather than specifying
  the join predicate(s) using array indexes, instead allow them to be specified
  using a hash of field names, as in traditional Bloom joins. This only works
  when the lset contains Structs.
* Remove lset#project, and allow lset#eqjoin to take zero predicates; in the
  latter case, eqjoin computes the Cartesian product.
* Support deletion rules (<-) with lattice values on the RHS

== 0.9.6 / 2013-02-25

* Support syntax sugar for initializing lattices (#294). For example, rather
  than writing "foo <= Bud::MaxLattice.new(2)", you can now just write "foo <=
  2". Note that, due to a bug in the superator gem, you cannot use this syntax
  with the <+ operator.
* Allow nested lattice values to be sent over channels (#295, patch from Josh
  Rosen). Lattice values could previously be sent as a field value in a tuple